# BassAES67

./: .gitignore  BASS_SRT.md  test_commands.txt
.claude/: settings.local.json
BassAES67/: BASS_PCM_DATA.md  CLAUDE.md  DEVELOPMENT_STEPS_12.md  DEVELOPMENT_STEPS_2.md
BassAES67/.claude/: settings.local.json
BassAES67/aes67_dotnet/: Aes67Native.cs  Aes67OutputStream.cs  AudioEngine.cs  Program.cs  aes67_dotnet.csproj
BassAES67/bass-addon/: bassraw.cpp  bassraw.def  bassraw.h  bassraw.vcxproj
BassAES67/bass-aes67/: Cargo.toml  bass_aes67.h  build.rs
BassAES67/bass-aes67/docs/: DEVELOPMENT_STEPS_1.md  DEVELOPMENT_STEPS_10.md  DEVELOPMENT_STEPS_11.md  DEVELOPMENT_STEPS_13.md  DEVELOPMENT_STEPS_14.md  DEVELOPMENT_STEPS_3.md  DEVELOPMENT_STEPS_4.md  DEVELOPMENT_STEPS_5.md  DEVELOPMENT_STEPS_6.md  DEVELOPMENT_STEPS_7.md  DEVELOPMENT_STEPS_8.md  DEVELOPMENT_STEPS_9.md
BassAES67/bass-aes67/examples/: aes67_input_lab.rs  aes67_loopback.rs  aes67_low_latency.rs  cpal_output.rs  file_to_aes67.rs  no_soundcard.rs  test_stream.rs
BassAES67/bass-aes67/src/: clock_bindings.rs  lib.rs  ptp_bindings.rs
BassAES67/bass-aes67/src/ffi/: addon.rs  bass.rs  mod.rs
BassAES67/bass-aes67/src/input/: jitter.rs  mod.rs  rtp.rs  stream.rs  url.rs
BassAES67/bass-aes67/src/output/: mod.rs  rtp.rs  stream.rs
BassAES67/bass-livewire-clock/: Cargo.toml  README.md
BassAES67/bass-livewire-clock/src/: client.rs  lib.rs  servo.rs  stats.rs  timer.rs
BassAES67/bass-opus-web/: Cargo.toml  build.rs
BassAES67/bass-opus-web/src/: encoder.rs  lib.rs
BassAES67/bass-opus-web/src/codec/: mod.rs  opus.rs
BassAES67/bass-opus-web/src/ffi/: bass.rs  mod.rs
BassAES67/bass-ptp/: Cargo.toml
BassAES67/bass-ptp/src/: client.rs  lib.rs  messages.rs  platform.rs  servo.rs  stats.rs  timer.rs
BassAES67/bass-rtp/: Cargo.toml  build.rs
BassAES67/bass-rtp/docs/: DEVELOPMENT_PLAN.md  DEVELOPMENT_STEPS_1.md  DEVELOPMENT_STEPS_2.md  DEVELOPMENT_STEPS_3.md  DEVELOPMENT_STEPS_4.md  DEVELOPMENT_STEPS_5.md  DEVELOPMENT_STEPS_6.md  DEVELOPMENT_STEPS_7.md  DEVELOPMENT_STEPS_8.md  Telos ZipOne RTP PayloadTypes.txt  debug.txt
BassAES67/bass-rtp/examples/: rtp_input_test.rs  rtp_loopback.rs  rtp_output_test.rs
BassAES67/bass-rtp/src/: clock_bindings.rs  lib.rs  url.rs
BassAES67/bass-rtp/src/codec/: ffmpeg_aac.rs  flac.rs  g711.rs  g722.rs  mod.rs  mpg123.rs  opus.rs  pcm.rs  twolame.rs
BassAES67/bass-rtp/src/ffi/: addon.rs  bass.rs  mod.rs
BassAES67/bass-rtp/src/input/: mod.rs  stream.rs
BassAES67/bass-rtp/src/output/: mod.rs  stream.rs
BassAES67/bass-rtp/src/output_new/: mod.rs  stream.rs
BassAES67/bass-rtp/src/rtp/: header.rs  mod.rs  payload.rs  socket.rs
BassAES67/bass-rtp/src/stream/: bidirectional.rs  input.rs  mod.rs  output.rs
BassAES67/bass-srt/: Cargo.toml  DEVELOPMENT_STEPS_SRT_1.md  DEVELOPMENT_STEPS_SRT_2.md  DEVELOPMENT_STEPS_SRT_3.md  DEVELOPMENT_STEPS_SRT_4.md  DEVELOPMENT_STEPS_SRT_5.md  bass-srt_dependencies.txt  build.rs  run_receiver.sh  run_sender.sh
BassAES67/bass-srt/.cargo/: config.toml
BassAES67/bass-srt/examples/: srt_sender.rs  srt_sender_framed.rs  test_srt_input.rs
BassAES67/bass-srt/src/: lib.rs  srt_bindings.rs
BassAES67/bass-srt/src/codec/: flac.rs  mod.rs  mpg123.rs  opus.rs  twolame.rs
BassAES67/bass-srt/src/ffi/: addon.rs  bass.rs
BassAES67/bass-srt/src/input/: mod.rs  stream.rs  url.rs
BassAES67/bass-srt/src/output/: encoder.rs  mod.rs  stream.rs
BassAES67/bass-srt/src/protocol/: mod.rs
BassAES67/bass-system-clock/: Cargo.toml
BassAES67/bass-system-clock/src/: lib.rs  timer.rs
BassAES67/bass-webrtc/: Cargo.toml  build.rs
BassAES67/bass-webrtc-ndi/: Cargo.toml  build.rs
BassAES67/bass-webrtc-ndi/docs/: DEVELOPMENT_STEPS_1.md  DEVELOPMENT_STEPS_2.md  logs.txt
BassAES67/bass-webrtc-ndi/examples/: ndi_test_pattern.rs  test_client_video.html  webrtc_ndi_receiver.rs
BassAES67/bass-webrtc-ndi/src/: frame.rs  lib.rs  sender.rs
BassAES67/bass-webrtc-ndi/src/codec/: mod.rs  opus.rs  video.rs
BassAES67/bass-webrtc-ndi/src/ffi/: bass.rs  mod.rs
BassAES67/bass-webrtc-ndi/src/ice/: mod.rs
BassAES67/bass-webrtc-ndi/src/peer/: connection.rs  manager.rs  mod.rs
BassAES67/bass-webrtc-ndi/src/signaling/: mod.rs  whep.rs  whep_ndi_client.rs  whip.rs  whip_client.rs  ws_peer.rs
BassAES67/bass-webrtc-ndi/src/stream/: input.rs  mod.rs  output.rs
BassAES67/bass-webrtc-signaling-dotnet/: Program.cs  SignalingServer.cs  bass-webrtc-signaling-dotnet.csproj
BassAES67/bass-webrtc/docs/: DEVELOPMENT_STEPS_1.md  DEVELOPMENT_STEPS_2.md  DEVELOPMENT_STEPS_3.md  DEVELOPMENT_STEPS_4.md  logs.txt  webrtc-web-config.txt
BassAES67/bass-webrtc/examples/: test_client.html  test_client_bidirectional.html  test_client_websocket.html  webrtc_bidirectional.rs  webrtc_mediamtx_test.rs
BassAES67/bass-webrtc/src/: lib.rs
BassAES67/bass-webrtc/src/codec/: mod.rs  opus.rs
BassAES67/bass-webrtc/src/peer/: connection.rs  manager.rs
BassAES67/bass-webrtc/src/signaling/: callback.rs  mod.rs  whep_client.rs  ws_signaling_server.rs
BassAES67/bass-webrtc/src/stream/: input.rs  output.rs
BassAES67/bass24/: bass.txt
BassAES67/bass_broadcast_dotnet/: BassProcessorNative.cs  BroadcastProcessor.cs  Program.cs  bass_broadcast_dotnet.csproj
BassAES67/bass_broadcast_processor/: Cargo.toml  build.rs
BassAES67/bass_broadcast_processor/docs/: DEVELOPMENT_STEPS_1.md  DEVELOPMENT_STEPS_2.md  Omnia9.md  PLAN.md
BassAES67/bass_broadcast_processor/examples/: file_to_speakers.rs  file_to_speakers_agc.rs  file_to_speakers_agc_3stage.rs  file_to_speakers_multiband.rs  file_to_speakers_presets.rs  file_to_speakers_stereo_enhancer.rs
BassAES67/bass_broadcast_processor/src/: lib.rs
BassAES67/bass_broadcast_processor/src/dsp/: agc.rs  biquad.rs  compressor.rs  crossover.rs  gain.rs  lufs_meter.rs  mod.rs  multiband.rs  parametric_eq.rs  soft_clipper.rs  stereo_enhancer.rs
BassAES67/bass_broadcast_processor/src/ffi/: bass.rs  mod.rs
BassAES67/bass_broadcast_processor/src/processor/: config.rs  mod.rs  multiband.rs  stats.rs
BassAES67/docs/: 24_32.txt  VISION.md  (+6 more)
(+64 files in other folders)
