[package]
name = "bass-ptp"
version = "0.1.0"
edition = "2021"
description = "PTP IEEE 1588v2 client library for AES67 audio"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
parking_lot = "0.12"
socket2 = { version = "0.5", features = ["all"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_Security",
] }

[build-dependencies]
