[package]
name = "bass-webrtc-ndi"
version = "0.1.0"
edition = "2021"
description = "WebRTC to NDI video/audio bridge for BASS"
authors = ["Kennet"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# NDI SDK bindings
grafton-ndi = "0.9"

# Async runtime (matching bass-webrtc)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"

[dev-dependencies]
ctrlc = "3.4"
